--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -318,11 +318,11 @@
     font-size: 1.18rem;
     //   font-family: $font-family-sans;
     font-weight: 400;
-    line-height: 1.62em;
+    line-height: 1.3;
 }
 
 .shanti-field-caption {
-    line-height: 1.3em;
+    line-height: 1.3;
     margin-bottom: 1.5em;
     color: #000;
 }
