Fixing All Collections page layout

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -273,6 +273,10 @@ div.image-wrapper.center figcaption {
     padding-bottom: 5rem;
 }
 
+header.collections + .two-columns .l-content__main {
+    display: block;
+}
+
 // --------------------------------------
 // * KMAPS SECTION
 // --------------------------------------
