--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -869,9 +869,9 @@ header.terms + .two-columns {
             width: 1.5rem;
             border-color: #4d59ca;
             border-top-color: #fff;
-            border-style: solid solid solid dashed;
+            border-style: solid;
             border-width: 4rem 0 8rem 0.1rem;
-            border-radius: 0.25rem;
+            border-radius: 0.2rem;
             opacity: 0.25;
             transition: all 0.35s;
         }
