converting hash references to text pages to path references and using mlid/plid for creating toc

--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -484,6 +484,9 @@
 
   .shanti-texts-toc
     position: relative
+    a.active
+      font-weight: bold
+      font-size: 105%
 
     ul
       margin-top: 0
