styling fixes to toggle switch for text metadata

--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -351,25 +351,30 @@
     position: relative
 
   .meta-toggle-col
+    margin-top: -0.7rem
     max-width: 0
     padding: 0.75rem 0 0 0
     z-index: 100
 
   .meta-toggle
-    margin: 1rem 0 0 0.25rem
+    margin: 0 0 0 35.5rem
     width: 1.5rem
-    background-color: #8c49a0
-    color: white
-    padding: 0 2px 1px 3px
-    border-top-left-radius: 6px
-    border-bottom-left-radius: 6px
-    vertical-align: text-bottom
+    border: none
+
+    //background-color: #8c49a0
+    //color: white
+    //padding: 0 2px 1px 3px
+    //border-top-left-radius: 6px
+    //border-bottom-left-radius: 6px
+    //vertical-align: text-bottom
 
   .closed
     .meta-toggle-col
-      margin-left: -0.5rem
+      margin-left: -0.25rem
+      margin-top: -1rem
 
     .meta-toggle
+      margin: 1rem 0 0 0.25rem
       background-color: transparent
       border: none
       border-radius: 0
