Update Search Filters container border style from dashed to solid

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -955,13 +955,12 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
     padding: 0.5rem 1rem 0.75rem;
     transition: all 0.25s;
     border-radius: 0.75rem;
-    border: 0.2rem dashed rgba(77, 89, 201, 0.5);
+    border: 0.1rem solid rgba(77, 89, 201, 0.5);
     border-left: 0.3rem solid #6b77ea;
     border-right: 0.3rem solid #6b77ea;
     background-color: #f9f9f9;
     color: $color-terms;
     font-weight: bold;
-
     > span {
         font-size: 1.5rem;
         font-weight: bold;
