--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -88,6 +88,9 @@
     position: absolute;
     right: -1.25rem;
 }
+.breadcrumb .breadcrumb-item + .breadcrumb-item:before {
+    content: '';
+}
 .breadcrumb .breadcrumb-item:first-of-type::after {
     content: ':';
     position: absolute;
