Update to get settings to work in standalones

--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -107,6 +107,7 @@ ul.fancytree-container {
     .label a {
         color: #000;
         margin: 0 0.5rem;
+        text-decoration: none;
         &:hover {
             color: #df3d26;
         }
