--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -121,6 +121,7 @@
         span.c-image__alttitle {
             display: inline-block;
             margin-left: 1rem;
+            color: white;
         }
     }
     .c-image__byline {
