--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -106,6 +106,13 @@
     background: white;
     z-index: 1;
     font-size: $font-size-default;
+
+    .icon:before {
+        padding-right: 0.5rem;
+    }
+    .icon {
+        line-height: 1.75rem;
+    }
 }
 
 .card-title {
