--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -4,11 +4,10 @@
 // JSON Dev Utility -
 .card-body .c-button__json {
     position: absolute;
-    bottom: 0rem;
+    right: 1.35rem;
+    bottom: 0;
     background-color: white;
     padding-bottom: 0.2rem;
-    right: 1.35rem;
-    width: 90%;
 }
 
 // Grid Card
@@ -330,18 +329,17 @@
 
 .shanti-field-caption {
     line-height: 1.3;
-    margin-bottom: 1.5em;
+    margin-bottom: 1.5rem;
     color: #000;
 }
 
-.shanti-field-uid span {
-    display: inline-block;
-    margin-top: 0.2em;
+.shanti-field-uid > div {
+    margin-top: 0.3rem;
     font-style: italic;
 }
 
 .c-smartRelateds__limited > div {
-    line-height: 1.38em;
+    line-height: 1.38;
 }
 
 .shanti-field-itemcount span::before,
