minor updates testing cron

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -510,7 +510,7 @@ header.terms + .two-columns {
     background-color: #eee;
     resize: horizontal;
     overflow: visible !important;
-    border-left: 0.25rem solid #d0d0d0;
+    border-left: 0.25rem solid blue !important;
 
     .advanced-search-and-tree {
         position: relative;
