--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -67,3 +67,15 @@
         font-size: 120%;
     }
 }
+
+#place-kmap-tabs-tabpane-essay {
+    margin-top: 1rem;
+    font-size: 110%;
+    .shanti-texts-section-title {
+        margin: 0.5rem 0 1rem;
+        font-style: italic;
+    }
+    .c-kmaps-related-text .nav-tabs {
+        margin-top: 2rem;
+    }
+}
