--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -74,6 +74,7 @@
     .shanti-texts-section-title {
         margin: 0.5rem 0 1rem;
         font-style: italic;
+        font-size: 170% !important;
     }
     .c-kmaps-related-text .nav-tabs {
         margin-top: 2rem;
