--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -884,11 +884,42 @@ header.terms + .two-columns {
     padding-right: 3.5rem;
     padding-left: 3.5rem;
 }
-.u-search__results__wrap .u-search__noresults__header {
-    font-size: 1.5rem;
-    width: 60%;
-}
+.u-search__noresults__wrap {
+    width: 75vw;
+    text-align: center;
 
+    .u-search__noresults {
+        display: block;
+        .u-search__noresults__header {
+            font-size: 3rem;
+        }
+        p {
+            font-size: 1.5rem;
+        }
+        button {
+            font-size: 1.2rem;
+            font-weight: bold;
+            letter-spacing: 0.075rem;
+            margin: 0 0.35rem;
+            padding: 0 1.75rem;
+            border: 1px solid #ddd;
+            border-radius: 1.8rem;
+            background-color: #a27f1c;
+            color: #fff;
+            border: 4px double #fff;
+            opacity: 0.9;
+            transition: all 0.2s;
+            text-transform: uppercase;
+            height: 3.25rem;
+            line-height: 1.5rem;
+            transform: scale(1);
+
+            &:hover {
+                cursor: pointer !important;
+            }
+        }
+    }
+}
 /*
  * RESIZE handle for RightSideBar
  */
