--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -8,7 +8,7 @@
   height: 100vh
   -webkit-tap-highlight-color: transparent
   max-width: 140rem
-  margin: 0
+  margin: 0 auto
 
   &.astviewer
     /*  background-color: #fcfcfc */
@@ -1125,8 +1125,6 @@
 
   @media screen and (min-width: 992px)
     /* testing these two rulesets is for positioning book reader height */
-    .l-site__wrap.texts
-      margin: 0
 
     #shanti-texts-sidebar
       max-width: 100%
