--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -392,7 +392,7 @@
       display: none
 
   #shanti-texts-body
-    padding: 0 0 0 2.5rem
+    padding: 1.5rem 1.5rem 2rem 3rem !important
     margin: 0 0 2rem
     min-width: 40rem
     // width: 60%
