--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1562,3 +1562,19 @@ span.refdate {
     padding-top: 3rem;
     background-color: #555;
 }
+
+.c-content__main__kmaps {
+    .c-kmaps-related-text {
+        .shanti-texts-section-title.text-level-1 {
+            display: none;
+        }
+
+        & > h1 {
+            font-size: 2.65rem;
+        }
+        h2.byline {
+            font-size: 1.75rem;
+            font-style: italic;
+        }
+    }
+}
