Style updates for featurePager__itemCount buttons, and right-col filter toggle buttons

--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -198,7 +198,8 @@
     border-width: 0.3rem 0.1rem;
     border-style: solid;
     border-color: #6b77ea;
-    border-radius: 0.5rem 0.5rem 1.5rem 1.5rem;
+    /* border-radius: 0.5rem 0.5rem 1.5rem 1.5rem; */
+    border-radius: 1rem;
     overflow: auto !important;
     box-shadow: inset -1rem -2rem 1.5rem #c9ccd82b;
     transition: max-height 0.65s, border 0.25s, margin 0.25s;
@@ -321,7 +322,7 @@
 .sui-advPlus {
     position: relative;
     top: -0.3rem;
-    margin-right: 1rem;
+    margin-right: 1.35rem;
 }
 
 .sui-advEditBut {
