--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -162,12 +162,12 @@
         .react-numeric-input b:first-of-type {
             top: -0.25rem !important;
             border-radius: 0.5rem 0.5rem 0 0 !important;
-            border-width: 0.25rem 0.1rem 0.1rem !important;
+            border-width: 0.25rem 0.05rem 0.1rem !important;
         }
         .react-numeric-input b:last-child {
             bottom: -0.25rem !important;
-            border-radius: 0 0 0.5rem 0.5rem !important;
-            border-width: 0 0.1rem 0.25rem !important;
+            border-radius: 0 0.05rem 0.5rem 0.5rem !important;
+            border-width: 0 0.05rem 0.25rem !important;
         }
         .react-numeric-input b:hover i {
             font-size: 2.35rem !important;
