Style right col filter view

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -814,7 +814,7 @@ header.terms + .two-columns {
         margin: 0.5rem 0.5rem 0 0;
         padding: 0;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
 
         button {
             font-size: 1.2rem;
