Style updates focus on search filter toggle buttons and dropdown

--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -17,7 +17,7 @@
     .c-featurePager__resultSummary {
         white-space: nowrap;
         margin: 0 auto 1.5rem;
-        padding-left: 1rem;
+        padding-left: 0;
         padding-right: 1rem;
         font-size: 1.55rem;
         font-style: italic;
@@ -125,7 +125,7 @@
     .c-featurePager__itemCount {
         white-space: nowrap;
         margin: -0.35rem auto 1.5rem;
-        padding-left: 1rem;
+        padding-left: 0;
         padding-right: 1rem;
         font-size: 1.6rem;
         font-style: italic;
