--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -61,7 +61,7 @@
 }
 .sui-advHeader .badge {
     padding: 0.65rem 3.75rem 0.65rem 1.25rem;
-    border-radius: 0.5em 0.75rem 0.1rem 0.75rem;
+    border-radius: 0.8em 0.75rem 0.75rem 0;
     color: #fff;
     cursor: default;
     line-height: 1.45;
@@ -69,7 +69,7 @@
     letter-spacing: 0.05rem;
     text-shadow: 0 0 0.1rem #161a3c;
     border: 1px solid #ddd;
-    border-right: 0.65rem double #fff;
+    border-right: 0.85rem double #fff;
     opacity: 0.85;
 }
 .sui-advHeader:hover .badge,
@@ -86,7 +86,7 @@
     color: #fff;
     cursor: default;
     position: absolute;
-    right: 1.5rem;
+    right: 1.75rem;
     top: 0.75rem;
     font-size: 1.25rem;
     text-shadow: 0 0 0.1rem #161a3c;
@@ -151,14 +151,15 @@
 .sui-advTerm {
     font-size: 1.35rem;
     padding: 0.2rem 0.5rem 0.3rem 0;
-    margin: 0 0.5rem 0.2rem;
+    margin: 0 0.9rem 0.2rem 0.6rem;
     text-transform: capitalize;
     cursor: default;
-    color: $color-terms;
+    color: $color-amber;
     background: #f7f7f7;
-    border: 0.1rem solid #c4c8ef;
+    border: 0.1rem solid #6b77ea;
     border-left: 0.2rem solid #6b77ea;
     border-right: 0.2rem solid #6b77ea;
+    border-top: 0.3rem solid #6b77ea;
     border-radius: 1rem;
     overflow: hidden;
 }
@@ -207,7 +208,7 @@
     transition: max-height 0.65s, border 0.25s, margin 0.25s;
     max-height: 0;
     font-size: 1.45rem;
-    margin: 0 0.5rem 0.75rem 0.5rem;
+    margin: 0 0.85rem 0.75rem 0.5rem;
 }
 .sui-advBox:first-child .sui-advEdit {
     font-size: 1.5rem;
@@ -324,7 +325,7 @@
 .sui-advPlus {
     position: relative;
     top: -0.3rem;
-    margin-right: 1.35rem;
+    margin-right: 1.5rem;
 }
 
 .sui-advEditBut {
