--- a/kmaps-app/src/views/Terms/TermsInfo.scss
+++ b/kmaps-app/src/views/Terms/TermsInfo.scss
@@ -86,6 +86,15 @@
     margin-left: 0;
     min-height: 10rem;
 }
+.otherdef-passages .passage-src {
+    width: 100%;
+    text-align: right;
+    margin-bottom: 1rem;
+
+    &:before {
+        content: '— ';
+    }
+}
 
 /** to match the style of other tabs */
 .term-details {
