--- a/kmaps-app/src/views/Terms/TermsInfo.scss
+++ b/kmaps-app/src/views/Terms/TermsInfo.scss
@@ -86,13 +86,16 @@
     margin-left: 0;
     min-height: 10rem;
 }
-.otherdef-passages .passage-src {
-    width: 100%;
-    text-align: right;
-    margin-bottom: 1rem;
+.otherdef-passages {
+    .passage-src,
+    .passage-note-author {
+        width: 100%;
+        text-align: right;
+        margin-bottom: 1rem;
 
-    &:before {
-        content: '— ';
+        &:before {
+            content: '— ';
+        }
     }
 }
 
