--- a/kmaps-app/src/views/Terms/TermsDetails/TermsDetails.css
+++ b/kmaps-app/src/views/Terms/TermsDetails/TermsDetails.css
@@ -3,8 +3,9 @@
 }
 .sui-termsDetails__list {
     list-style: none;
-    padding-left: 0;
-    margin-bottom: 0;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+    padding: 1rem;
 }
 @media (min-width: 992px) {
     .sui-termsDetails__list {
