--- a/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsDetails/TermDefinitionsDetails.scss
+++ b/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsDetails/TermDefinitionsDetails.scss
@@ -1,3 +1,5 @@
+@import '../../../../index-variables';
+
 .sui-termDefDetailsWrapper {
     position: relative;
 }
@@ -12,4 +14,11 @@
 .sui-termDefDetails__text {
     font-weight: 400;
     font-style: italic;
+}
+
+.sui-termDefinitions__content .term-def-info .details-ref {
+    button {
+        color: $color-terms;
+        margin-top: -2rem;
+    }
 }
