--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -1,4 +1,5 @@
 @import '../../_index-variables.scss';
+@import 'kmaps_shared';
 
 #place-kmap-tabs-tabpane-map {
     //  min-height: calc(100vh - 12rem);
@@ -78,9 +79,6 @@
     }
     .c-kmaps-related-text {
         padding: 0 1.5rem 1.5rem;
-    }
-    .c-kmaps-related-text .nav-tabs {
-        margin-top: 2rem;
     }
 }
 
