--- a/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsDetails/TermDefinitionsDetails.scss
+++ b/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsDetails/TermDefinitionsDetails.scss
@@ -2,6 +2,9 @@
 
 .sui-termDefDetailsWrapper {
     position: relative;
+    margin: -0.5rem 0 1rem;
+    padding-bottom: 1rem;
+    border-bottom: thin solid #ccc;
 }
 .sui-termDefDetails__item {
     margin-bottom: 0.2rem;
