--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1153,14 +1153,14 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         background-color: #fff;
         margin-left: 4rem !important;
     }
-    .u-icon__plus {
+    .u-icon__plus:before {
         color: $color-amber;
         opacity: 0.4;
         display: inline-block;
         margin-right: 0;
         margin-left: -4.8rem;
         padding: 0 1.5rem;
-        font-size: 1.85rem;
+        font-size: 1.3rem;
         position: relative;
         top: 0.35rem;
         &:hover {
@@ -1172,9 +1172,13 @@ header.terms + .two-columns .c-view__wrapper.gallery {
             opacity: 1;
         }
     }
+    .u-icon__plus.open:before {
+        transform: rotate(45deg);
+        opacity: 1;
+    }
 
     .card .type.icon {
-        font-size: 1.2rem;
+        font-size: 0.9rem;
         padding: 0.54rem;
         border: 3px double #fff;
         border-radius: 0.5rem;
@@ -1388,7 +1392,8 @@ header.terms + .two-columns .c-view__wrapper.gallery {
     }
 
     .collapse .info.kmaps,
-    .collapsing .info.kmaps {
+    .collapsing .info.kmaps,
+    .info.kmaps {
         p.caption {
             margin-bottom: 0;
             font-style: italic;
@@ -1396,6 +1401,16 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         div.altnames {
             margin: 0 0 0 1rem;
             font-size: 1.25rem;
+            .altname {
+                display: inline-block;
+                margin-right: 0.5rem;
+                &:after {
+                    content: ', ';
+                }
+                &:last-of-type:after {
+                    content: '';
+                }
+            }
             .bo {
                 font-size: 1.9rem;
             }
