--- a/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsDetails/TermDefinitionsDetails.scss
+++ b/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsDetails/TermDefinitionsDetails.scss
@@ -2,9 +2,7 @@
 
 .sui-termDefDetailsWrapper {
     position: relative;
-    margin: -0.5rem 0 1rem;
-    padding-bottom: 1rem;
-    border-bottom: thin solid #ccc;
+    margin: -0.5rem 0 0;
 }
 .sui-termDefDetails__item {
     margin-bottom: 0.2rem;
