--- a/kmaps-app/src/views/Terms/TermsInfo.scss
+++ b/kmaps-app/src/views/Terms/TermsInfo.scss
@@ -127,7 +127,7 @@
     }
 
     .tab-content {
-        padding: 1.5rem;
+        padding: 1.5rem 1.5rem 0;
         border: thin solid #ccc;
         border-radius: 1rem;
     }
@@ -191,6 +191,11 @@
 
 .term-defcnt {
     display: flex;
+
+    span.l-defnum {
+        float: left;
+        padding-right: 0.5rem;
+    }
 }
 
 .term-def-info {
